synthizer-sys/synthizer-vendored/include/synthizer.h

/*
 * Note to maintainers: C API methods that obviously go with  a type live in the main .cpp file for that type, even if it is necessary to introduce a cpp file for that type to hold the C API (i.e. pure abstract classes).
 * 
 * Other methods are in src/c_api.cpp (i.e. generic property setters, initialization, etc.).
 * */

/*
 * A handle to any Synthizer object. Always nonzero.
 * */
typedef unsigned long long syz_Handle;
/*
 * An error. code. Specific error constants TBD. 0 means success.
 * */
typedef int syz_ErrorCode;
/*
 * Event payloads.
 *
 * Note to maintainers: pulling these out to a separate header breaks at least autopxd, and possibly other bindings generators.
 * */

struct syz_Event {
	int type;
	syz_Handle source;
	/**
	 *  * Can be 0. The context of the event, if any.
	 * */
	syz_Handle context;
};
typedef void syz_UserdataFreeCallback(void *);
/*
 * Create a context. This represents the audio device itself, and all other Synthizer objects need one.
 * */
SYZ_CAPI syz_ErrorCode syz_createContext(syz_Handle *out);
/*
 * Create a context which doesn't feed an audio device.
 * Currently this is exposed for testing purposes, but will eventually become a stable and useful API.
 * */
SYZ_CAPI syz_ErrorCode syz_createContextHeadless(syz_Handle *out);
/*
 * get a block of audio with 2 channels. This is also 
 * currently only exposed for testing, especially since "block" is not part of the external API and using this wrong is a good way to
 * crash for the time being.
 * */
SYZ_CAPI syz_ErrorCode syz_contextGetBlock(syz_Handle context, float *block);
/**
 * Event support.
 * */

/**
 * Enable events for a context. Once enabled, failure to drain the event queue is effectively a memory leak as the
 * queue will continue to fill forever.
 * 
 * Once enabled, it is not possible to disable events.
 * */
SYZ_CAPI syz_ErrorCode syz_contextEnableEvents(syz_Handle context);
/**
 * Get an event from the queue. If the queue is empty, the event type
 * is SYZ_EVENT_TYPE_INVALID.
 * */
SYZ_CAPI syz_ErrorCode syz_contextGetNextEvent(struct syz_Event *out, syz_Handle context, unsigned long long flags);
/**
 * Stream infrastructure. See the manual for details on these functions.
 * 
 * Most objects provide a convenient shorthand helper for creating a stream handle and passing it into the object.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromStreamParams(syz_Handle *out, const char *protocol, const char *path, void *param);
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromMemory(syz_Handle *out, unsigned long long data_len, const char *data);
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromFile(syz_Handle *out, const char *path);
/**
 * Custom streams.
 *
 * The callbacks here return a non-zero value to indicate an error, and may
 * assign a string to `err_msg` which must live until either:
 * - The end of the stream's lifetime; or
 * - The next time a callback associated with that stream is called.
 *
 * So, e.g., using a thread local to keep objects alive in bindings is fine.
 *
 * At the moment, these values are logged, but it is not possible to otherwise
 * recover them.
 * */

/**
 * Read from a stream. Must always write as many bytes as are requested.  Writing
 * less indicates the end of stream.
 * */
typedef int syz_StreamReadCallback(unsigned long long *read, unsigned long long requested, char *destination, void *userdata, const char ** err_msg);
/**
 * Stream seek callback. Should be self-explanatory.
 * */
typedef int syz_StreamSeekCallback(unsigned long long pos, void *userdata, const char **err_msg);
/**
 * Close the stream.
 *
 * The stream lifetime actually ends when the destroy callback is called.  The
 * lifetime of err_msg must be at least as long as the duration until that
 * point.  Put simply:
 * - If you're a C developer, you can either ignore the destroy callback and
 *   free your resources in close (in which case err_msg must effectively be a
 *   static string) or free your resources in destroy (in which case err_msg is a
 *   thing you can free).
 * - If you're developing bindings, you can use the destroy callback to keep
 *   exception objects and byte buffers around.
 * */
typedef int syz_StreamCloseCallback(void *userdata, const char **err_msg);
/**
 * The stream destroy callback is optional and is called when the steraam will
 * no longer be used.  Thhis primarily exists for bindinggs developers so that
 * they can keep error messages alive long enough and make sure the stream always dies.  Note that this is called if `syz_createStreamHandleFromCustomStream` fails as well, in the calling thread.
 * */
typedef void syz_StreamDestroyCallback(void *userdata);
/**
 * Represents a custom stream.  If the length of the stream is unknown, set it to -1.  Note that internally Synthizer
 * treats streams of unknown length as unseekable even if the seek callback is set.
 * */
struct syz_CustomStreamDef {
	syz_StreamReadCallback *read_cb;
	/**
	 * Optional. If unset, this stream doesn't support seeking.
	 * */
	syz_StreamSeekCallback *seek_cb;
	syz_StreamCloseCallback *close_cb;
	/* Optional. Set to NULL if not using. */
	syz_StreamDestroyCallback *destroy_cb;
	long long length;
	void *userdata;
};
/**
 * Get a stream handle from CustomStreamDef.
 *
 * If this function fails, the stream's close and destroy callbacks will be
 * called as if it had succeeded, in an arbitrary thread which may include the
 * caller.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromCustomStream(syz_Handle *out, struct syz_CustomStreamDef *callbacks);
/**
 * Open a stream by filling out the callbacks struct.
 * 
 * Stream opening is done in the context of the calling thread, which means that the lifetime of err_msg only needs to be long enough that Synthizer can 
 * convert it to a SynthizerError.  Put another way, if calling `syz_streamHandleFromStreamParams`, this callback is called inline and the string will be cloned and communicated out through the usual Synthizer error
 * mechanism.
 * */
typedef int syz_StreamOpenCallback(struct syz_CustomStreamDef *callbacks, const char *protocol, const char *path, void *param, void *userdata, const char **err_msg);
/**
 * Register a protocol with the stream handler.
 * 
 * afterword, this can be used as `syz_streamHandleFromStreamParams(&handle, "myprotocol", "mypath", myparam)`.
 * 
 * It is not possible to unregister protocols.
 * */
SYZ_CAPI syz_ErrorCode syz_registerStreamProtocol(const char *protocol, syz_StreamOpenCallback *callback, void *userdata);
/*
 * Create a generator that represents reading from a stream.
 * users who wish to read from files should call syz_createStreamingGeneratorFromFile, which is more future-proof than this API and should not break between major releases.
 * 
 * @param protocol: The protocol. You probably want file.
 * @param path: The path.
 * @param param: an opaque void parameter for the underlying implementation; NULL for built-in protocols.
 * 
 * This will be documented better when there's a manual and more than one type of protocol.
 * 
 * This is a shortcut for creating the stream yourself and adding it to a DecodingGenerator; advanced use cases can use the alternate path for other optimizations in future.
 * 
 * Note to maintainers: lives in src/generators/decoding.cpp, because it's a shortcut for that.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamingGeneratorFromStreamParams(syz_Handle *out, syz_Handle context, const char *protocol, const char *path, void *param);
/*
 * Same as calling syz_createStreamingGeneratorFromStreamParams with the file protocol. Exists to future-proof the API.
 */
SYZ_CAPI syz_ErrorCode syz_createStreamingGeneratorFromFile(syz_Handle *out, syz_Handle context, const char *path);
/**
 * Create a StreamingGenerator from a stream handle.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamingGeneratorFromStreamHandle(syz_Handle *out, syz_Handle context, syz_Handle stream);
/*
 * A Buffer is decoded audio data.
 * 
 * This creates one from the 3 streaming parameters.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromStreamParams(syz_Handle *out, const char *protocol, const char *path, void *param);
/**
 * Create a buffer from encoded audio data that's already
 * in memory.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromEncodedData(syz_Handle *out, unsigned long long data_len, const char *data);
/**
 * Create a buffer from a float array in memory.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromFloatArray(syz_Handle *out, unsigned int sr, unsigned int channels, unsigned long long frames, const float *data);
/**
 * Create a buffer from a file. Currently equivalent to:
 * syz_createBufferFromStreamParams(&out, "file", "the_path", NULL);
 *
 * Exists to future-proof the API.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromFile(syz_Handle *out, const char *path);
/**
 * create a buffer from a stream handle.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromStreamHandle(syz_Handle *out, syz_Handle stream);
SYZ_CAPI syz_ErrorCode syz_bufferGetChannels(unsigned int *out, syz_Handle buffer);
SYZ_CAPI syz_ErrorCode syz_bufferGetLengthInSamples(unsigned int *out, syz_Handle buffer);
SYZ_CAPI syz_ErrorCode syz_bufferGetLengthInSeconds(double *out, syz_Handle buffer);