synthizer-sys/src/synthizer.rs

#[test]
fn bindgen_test_layout_syz_AutomationCommand() {
    assert_eq!(
        ::std::mem::size_of::<syz_AutomationCommand>(),
        96usize,
        concat!("Size of: ", stringify!(syz_AutomationCommand))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_AutomationCommand>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_AutomationCommand))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationCommand>())).target as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommand),
            "::",
            stringify!(target)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationCommand>())).time as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommand),
            "::",
            stringify!(time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationCommand>())).type_ as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommand),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationCommand>())).flags as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommand),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationCommand>())).params as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommand),
            "::",
            stringify!(params)
        )
    );
}
impl Default for syz_AutomationCommand {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn syz_createAutomationBatch(
        out: *mut syz_Handle,
        context: syz_Handle,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_automationBatchAddCommands(
        batch: syz_Handle,
        commands_len: ::std::os::raw::c_ulonglong,
        commands: *const syz_AutomationCommand,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_automationBatchExecute(batch: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createContext(
        out: *mut syz_Handle,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createContextHeadless(
        out: *mut syz_Handle,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_contextGetBlock(context: syz_Handle, block: *mut f32) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_contextEnableEvents(context: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_contextGetNextEvent(
        out: *mut syz_Event,
        context: syz_Handle,
        flags: ::std::os::raw::c_ulonglong,
    ) -> syz_ErrorCode;
}
pub type syz_StreamReadCallback = ::std::option::Option<
    unsafe extern "C" fn(
        read: *mut ::std::os::raw::c_ulonglong,
        requested: ::std::os::raw::c_ulonglong,
        destination: *mut ::std::os::raw::c_char,
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type syz_StreamSeekCallback = ::std::option::Option<
    unsafe extern "C" fn(
        pos: ::std::os::raw::c_ulonglong,
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type syz_StreamCloseCallback = ::std::option::Option<
    unsafe extern "C" fn(
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type syz_StreamDestroyCallback =
    ::std::option::Option<unsafe extern "C" fn(userdata: *mut ::std::os::raw::c_void)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct syz_CustomStreamDef {
    pub read_cb: syz_StreamReadCallback,
    pub seek_cb: syz_StreamSeekCallback,
    pub close_cb: syz_StreamCloseCallback,
    pub destroy_cb: syz_StreamDestroyCallback,
    pub length: ::std::os::raw::c_longlong,
    pub userdata: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_syz_CustomStreamDef() {
    assert_eq!(
        ::std::mem::size_of::<syz_CustomStreamDef>(),
        48usize,
        concat!("Size of: ", stringify!(syz_CustomStreamDef))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_CustomStreamDef>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_CustomStreamDef))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).read_cb as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(read_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).seek_cb as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(seek_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).close_cb as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(close_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).destroy_cb as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(destroy_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).length as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).userdata as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(userdata)
        )
    );
}
impl Default for syz_CustomStreamDef {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
pub type syz_StreamOpenCallback = ::std::option::Option<
    unsafe extern "C" fn(
        callbacks: *mut syz_CustomStreamDef,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn syz_registerStreamProtocol(
        protocol: *const ::std::os::raw::c_char,
        callback: syz_StreamOpenCallback,
        userdata: *mut ::std::os::raw::c_void,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamHandleFromStreamParams(
        out: *mut syz_Handle,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamHandleFromMemory(
        out: *mut syz_Handle,
        data_len: ::std::os::raw::c_ulonglong,
        data: *const ::std::os::raw::c_char,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamHandleFromFile(
        out: *mut syz_Handle,
        path: *const ::std::os::raw::c_char,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamHandleFromCustomStream(
        out: *mut syz_Handle,
        callbacks: *const syz_CustomStreamDef,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamingGeneratorFromStreamParams(
        out: *mut syz_Handle,
        context: syz_Handle,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamingGeneratorFromFile(
        out: *mut syz_Handle,
        context: syz_Handle,
        path: *const ::std::os::raw::c_char,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamingGeneratorFromStreamHandle(
        out: *mut syz_Handle,
        context: syz_Handle,
        stream: syz_Handle,
        config: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromStreamParams(
        out: *mut syz_Handle,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromEncodedData(
        out: *mut syz_Handle,
        data_len: ::std::os::raw::c_ulonglong,
        data: *const ::std::os::raw::c_char,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromFloatArray(
        out: *mut syz_Handle,
        sr: ::std::os::raw::c_uint,
        channels: ::std::os::raw::c_uint,
        frames: ::std::os::raw::c_ulonglong,
        data: *const f32,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromFile(
        out: *mut syz_Handle,
        path: *const ::std::os::raw::c_char,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromStreamHandle(
        out: *mut syz_Handle,
        stream: syz_Handle,
        userdata: *mut ::std::os::raw::c_void,
        userdata_free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetChannels(
        out: *mut ::std::os::raw::c_uint,
        buffer: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetLengthInSamples(
        out: *mut ::std::os::raw::c_uint,
        buffer: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetLengthInSeconds(out: *mut f64, buffer: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetSizeInBytes(
        size: *mut ::std::os::raw::c_ulonglong,
        buffer: syz_Handle,
    ) -> syz_ErrorCode;
}
